--- a/rm1.html
+++ b/rm1.html
@@ -12,7 +12,7 @@
 <body>
     <header id="header">
         <img src="logo_iium.png" alt="IIUM Logo" id="header-logo">
-        <h1>RM1 Campaign</h1>
+        <h1>RM1 Campaign<img src="donationIcons.png" alt="donate Icons" id="donateIcons"></h1>
         <p>Let your contributions be perpetual for the pleasure of Allah swt</p>
         
     </header>
@@ -21,7 +21,7 @@
         <div id="border">
         <p>"The example of those who spend their wealth in the way of Allah<br>
             is like a seed [a grain] which grows seven spikes; in each spike <br>
-            is a undred grains. And Allah multiplies [His reward] for whome He wills. <br>
+            is a hundred grains. And Allah multiplies [His reward] for whom He wills. <br>
             And Allah is all-Encompassing and Knowing." <br>
         </p><br>
         <p>Quranic Verse: Al-Baqarah:261</p>
